Fix: check if tokens is empty