@@ -15,13 +15,21 @@ public abstract class BaseAnnotator implements Annotator {
 	@Override
 	public final List<CategorySemantics> annotate(
 		long tenantId, String...tokens) {
-		return annotate_(
-			tenantId,
-			Arrays
-				.stream(tokens)
-				.filter(token -> Arrays.asList(
-					_annotatorConfig.stopWords()).contains(token))
-				.toArray(String[]::new));
+
+		String[] strings = Arrays
+			.stream(tokens)
+			.filter(token -> Arrays.asList(
+				_annotatorConfig.stopWords()).contains(token))
+			.toArray(String[]::new);
+
+		if (strings.length == 0) {
+			return List.of();
+		}
+		else {
+			return annotate_(tenantId, strings);
+		}
+
+
 	}
 
 	protected void setAnnotatorConfig(AnnotatorConfig annotatorConfig) {
